--- a/Index.html
+++ b/Index.html
@@ -672,8 +672,8 @@
                 </div>
                 <div class="about-content">
                     <h2>Hello! I'm Mohamed Tarek</h2>
-                    <p> a passionate full-stack developer with expertise in building responsive and scalable web applications. My journey in web development started [X] years ago, and I've been hooked ever since.</p>
-                    <p>specialize in JavaScript-based technologies and have experience with both front-end and back-end development. I also have experience with database management, API design, and cloud deployment.</p>
+                    <p> a passionate full-stack developer with expertise in building responsive and scalable web applications. My journey in web development started 3 years ago, and I've been hooked ever since.</p>
+                    <p>specialize in Full-Stack based technologies and have experience with both front-end and back-end development. I also have experience with database management, API design, and cloud deployment.</p>
                     <p>When I'm not coding, you can find me watching Courses. I believe in continuous learning and always stay updated with the latest technologies and trends in web development.</p>
                     <a href="#contact" class="btn">Get In Touch</a>
                 </div>
