--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1000,9 +1000,11 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <div class="hero-content">
-                <h1 data-aos="fade-down" data-aos-duration="1000">Full-Stack Developer & Software Engineer</h1>
-                <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">I create responsive, user-friendly websites and applications using modern technologies like HTML, CSS, JavaScript, and more.</p>
+            <div class="hero-content"><h1 data-aos="fade-down" data-aos-duration="1000">Front-End Focused Full-Stack Developer</h1>
+<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+    I specialize in building responsive and user-friendly interfaces with HTML, CSS, and JavaScript, while also handling backend development and database integration to deliver complete web solutions.
+</p>
+            </div>
                 <div class="hero-btns" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                     <a href="#projects" class="btn">View Projects</a>
                     <a href="#contact" class="btn btn-outline">Contact Me</a>
