--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1000,7 +1000,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <div class="hero-content"><h1 data-aos="fade-down" data-aos-duration="1000">Front-End Focused Full-Stack Developer</h1>
+            <div class="hero-content"><h1 data-aos="fade-down" data-aos-duration="1000">Software Developer</h1>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
     I specialize in building responsive and user-friendly interfaces with HTML, CSS, and JavaScript, while also handling backend development and database integration to deliver complete web solutions.
 </p>
