--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
                 </div>
                 
                 <!-- Additional Project 3 -->
-                <div class="project" data-category="lms" data-aos="fade-up" data-aos-delay="500">
+<!--                 <div class="project" data-category="lms" data-aos="fade-up" data-aos-delay="500">
                     <div class="project-img">
                         <img src="https://placehold.co/600x400/17a2b8/ffffff?text=Online+Course+Platform" alt="Online Course
 
@@ -1201,7 +1201,7 @@
                         </div>
                         <a href="#" class="btn">View Project</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
